--- a/rangpurbackend/package.json
+++ b/rangpurbackend/package.json
@@ -27,6 +27,7 @@
     "react-to-print": "^3.1.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
+    "sharp": "^0.34.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
