--- a/rangpurbackend/package.json
+++ b/rangpurbackend/package.json
@@ -30,6 +30,12 @@
     "sharp": "^0.34.1",
     "web-vitals": "^2.1.4"
   },
+
+
+"engines": {
+  "node": "18.x"
+},
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
